Fix issue with z-index

--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,7 @@ footer {
 	text-align: center;
 	color: white;
 	padding: 10px;
+	z-index: 1;
 }
 
 footer {
@@ -169,9 +170,9 @@ p {
 	color: black;
 }
 
-#closeForm:hover, .bookDeleteButtons:hover {
-    	background-color: rgba(250, 1, 128, 1);
-
+#closeForm:hover,
+.bookDeleteButtons:hover {
+	background-color: rgba(250, 1, 128, 1);
 }
 
 #closeForm > span,
